--- a/tex/texlive-bin/Portfile
+++ b/tex/texlive-bin/Portfile
@@ -10,7 +10,7 @@ PortGroup       muniversal 1.1
 
 name            texlive-bin
 version         2023.66589
-revision        4
+revision        5
 
 categories      tex
 maintainers     {dports @drkp}
@@ -240,10 +240,7 @@ if {[string match *clang* ${configure.cxx}]} {
     configure.cxxflags-append -Wno-reserved-user-defined-literal
 }
 
-destroot.violate_mtree  yes
-
 # Useful variables to set up the TeXDist directory structure.
-# See below in post-destroot and pre-activate.
 set texdist_root         /Library/TeX/Distributions
 set texdist_fd           .FactoryDefaults
 if {[string equal ${prefix} {/opt/local}]} {
@@ -283,138 +280,6 @@ post-destroot   {
             system "gzip $manpage"
         }
     }
-
-    # Create version/arch-specific links to the texbin directory used
-    # by the TeXDist prefpane; it seems that future versions of the
-    # prefpane will want these.
-    xinstall -d ${destroot}${texlive_mactex_texdistdir}-${version}
-    if {[variant_exists universal] && [variant_isset universal]} {
-        ln -s ${texlive_mactex_texbindir} \
-            ${destroot}${texlive_mactex_texdistdir}-${version}/universal-darwin
-    } else {
-        ln -s ${texlive_mactex_texbindir} \
-            ${destroot}${texlive_mactex_texdistdir}-${version}/${configure.build_arch}-darwin
-    }
-    ln -s ${texlive_mactex_texdistdir}-${version} \
-          ${destroot}${texlive_mactex_texdistdir}
-
-    # Install the TeXDist directory structure describing MacPorts' TeX Live.
-    #
-    # It is used to switch between TeX distribution on macOS by tools such as
-    # the TeX Live Utility, the texdist script, the TeX Distribution
-    # Preference Pane, and the LocalTeX Preference Pane.
-    # For more details, see
-    #   - the file TeXDist-description.rtf (installed by MacTeX/BasicTeX in
-    #     /Library/TeX/Distributions),
-    #   - MacTeX/BasicTeX's postinstall script,
-    #   - the postinstall script in https://github.com/TeXLive-M/TeXDist, and
-    #   - http://www.tug.org/mactex/multipletexdistributions.html .
-    #
-    # With respect to TeXDist-description.rtf and the postinstall scripts,
-    # we do not install
-    #   - /usr/texbin,
-    #   - /Library/TeX/Distributions/.DefaultTeX,
-    #   - anything in /Library/TeX outside /Library/TeX/Distributions.
-    # In fact they are useful only when other distributions are installed,
-    # and they install those missing pieces.
-    #
-    # MacTeX/BasicTeX's postinstall (but not the other one) install also
-    # symlinks Local/TEXMF{HOME,VAR,CONFIG} inside Contents, but they are not
-    # documented in TeXDist-description.rtf: we do not install them.
-    #
-    # The directories MacPorts-TeXLive.texdist and MacPorts-teTeX.texdist in
-    # /Library/TeX/Distributions/ and MacPorts-TeXLive and MacPorts-teTeX in
-    # /Library/TeX/Distributions/.FactoryDefaults/ are considered by
-    # TeX Live / MacTeX developers as owned by MacPorts (see
-    # https://github.com/macports/macports-ports/pull/6755#issuecomment-613055213).
-    #
-    # Moreover, they are useful only if MacPorts' TeX Live is installed, so
-    # removing the old ones here and not restoring them in post-deactivate
-    # does no harm to the user. Consider also that teTeX does not exist
-    # anymore in MacPorts.
-
-    xinstall -d ${destroot}${texdist_mp}
-    ln -s ../${texdist_fd}/${texdist_name}/Contents ${destroot}${texdist_mp}/Contents
-
-    xinstall -d ${destroot}${texdist_mpfd}/AllTexmf
-    ln -s ${texlive_texmfports} ${destroot}${texdist_mpfd}/AllTexmf/texmf
-    ln -s ${texlive_texmfdist} ${destroot}${texdist_mpfd}/AllTexmf/texmf-dist
-    ln -s ${texlive_texmfdist}/doc ${destroot}${texdist_mpfd}/AllTexmf/texmf-doc
-    ln -s ${texlive_texmflocal} ${destroot}${texdist_mpfd}/AllTexmf/texmf-local
-    ln -s ${texlive_texmfsysvar} ${destroot}${texdist_mpfd}/AllTexmf/texmf-var
-
-    xinstall -d ${destroot}${texdist_mpfd}/Doc
-    ln -s ${texlive_texmfdist}/doc ${destroot}${texdist_mpfd}/Doc/texmf-dist-doc
-    ln -s ${texlive_texmfports}/doc ${destroot}${texdist_mpfd}/Doc/texmf-doc
-    ln -s ${texlive_texmfdist}/doc ${destroot}${texdist_mpfd}/Doc/texmf-doc-doc
-    ln -s ${texlive_texmfdist}/doc ${destroot}${texdist_mpfd}/Doc/texmf-var-doc
-
-    ln -s ${prefix}/share/info ${destroot}${texdist_mpfd}/Info
-    ln -s ${prefix}/share/man ${destroot}${texdist_mpfd}/Man
-
-    # The texdist script determines if a TeX distribution is usable
-    # by testing the binaries in the directory called `uname -p`.
-    # `uname -p` outputs i386 also for x86_64 systems.
-    xinstall -d ${destroot}${texdist_mpfd}/Programs
-    if {[variant_exists universal] && [variant_isset universal]} {
-        if {[string match "*ppc*" ${configure.universal_archs}]} {
-            ln -s ${texlive_mactex_texbindir} ${destroot}${texdist_mpfd}/Programs/powerpc
-            ln -s ${texlive_mactex_texbindir} ${destroot}${texdist_mpfd}/Programs/ppc
-        }
-        if {"x86_64" in ${configure.universal_archs} || "i386" in ${configure.universal_archs}} {
-            ln -s ${texlive_mactex_texbindir} ${destroot}${texdist_mpfd}/Programs/i386
-        }
-        if {"x86_64" in ${configure.universal_archs}} {
-            ln -s ${texlive_mactex_texbindir} ${destroot}${texdist_mpfd}/Programs/x86_64
-        }
-    } else {
-        if {[string match "ppc*" ${configure.build_arch}]} {
-            ln -s ${texlive_mactex_texbindir} ${destroot}${texdist_mpfd}/Programs/powerpc
-            ln -s ${texlive_mactex_texbindir} ${destroot}${texdist_mpfd}/Programs/ppc
-        } else {
-            if {${configure.build_arch} eq "x86_64"} {
-                ln -s ${texlive_mactex_texbindir} ${destroot}${texdist_mpfd}/Programs/i386
-            }
-            ln -s ${texlive_mactex_texbindir} ${destroot}${texdist_mpfd}/Programs/${configure.build_arch}
-        }
-    }
-    ln -s ${texlive_mactex_texbindir} ${destroot}${texdist_mpfd}/Programs/texbin
-
-    xinstall -d ${destroot}${texdist_mpfd}/Resources/English.lproj
-    xinstall -m 644 ${filespath}/Description.rtf \
-        ${destroot}${texdist_mpfd}/Resources/English.lproj/Description.rtf
-    reinplace "s|%%PREFIX%%|${prefix}|g" \
-        ${destroot}${texdist_mpfd}/Resources/English.lproj/Description.rtf
-    reinplace "s|%%VERSION%%|${version}|g" \
-        ${destroot}${texdist_mpfd}/Resources/English.lproj/Description.rtf
-
-    ln -s ${prefix}/share ${destroot}${texdist_mpfd}/Root
-
-    set texdist_vfile [open ${destroot}${texdist_mpfd}/TeXDistVersion w]
-    puts ${texdist_vfile} "1"
-    close ${texdist_vfile}
-
-    ln -s ${texlive_texmflocal} ${destroot}${texdist_mpfd}/TexmfLocal
-    ln -s ${texlive_texmfsysvar} ${destroot}${texdist_mpfd}/TexmfSysVar
-}
-
-pre-activate {
-    # Delete leftover MacPorts-related TeXDist directories.
-    # See comment above in post-destroot for the rationale.
-    if {[string equal ${prefix} {/opt/local}]} {
-        set texdist_delete_dist [list TeXLive teTeX]
-        foreach dist ${texdist_delete_dist} {
-            set texdist_delete_dir [list \
-                ${texdist_root}/MacPorts-${dist}.texdist \
-                ${texdist_root}/${texdist_fd}/MacPorts-${dist} \
-            ]
-            foreach dir ${texdist_delete_dir} {
-                if {[file exists ${dir}]} {
-                    delete file ${dir}
-                }
-            }
-        }
-    }
 }
 
 post-activate {
@@ -439,6 +304,147 @@ variant motif requires x11 description {Use Motif to build xdvi} {
     configure.args-delete --with-xdvi-x-toolkit=xaw
     depends_lib-append lib:libXm:openmotif
     configure.args-append --with-xdvi-x-toolkit=motif
+}
+
+# Install the TeXDist directory structure describing MacPorts' TeX Live.
+#
+# It is used to switch between TeX distribution on macOS by tools such as
+# the TeX Live Utility, the texdist script, the TeX Distribution
+# Preference Pane, and the LocalTeX Preference Pane.
+# For more details, see
+#   - the file TeXDist-description.rtf (installed by MacTeX/BasicTeX in
+#     /Library/TeX/Distributions),
+#   - MacTeX/BasicTeX's postinstall script,
+#   - the postinstall script in https://github.com/TeXLive-M/TeXDist, and
+#   - http://www.tug.org/mactex/multipletexdistributions.html .
+#
+# With respect to TeXDist-description.rtf and the postinstall scripts,
+# we do not install
+#   - /usr/texbin,
+#   - /Library/TeX/Distributions/.DefaultTeX,
+#   - anything in /Library/TeX outside /Library/TeX/Distributions.
+# In fact they are useful only when other distributions are installed,
+# and they install those missing pieces.
+#
+# MacTeX/BasicTeX's postinstall (but not the other one) install also
+# symlinks Local/TEXMF{HOME,VAR,CONFIG} inside Contents, but they are not
+# documented in TeXDist-description.rtf: we do not install them.
+#
+# These are installed outside MacPorts's prefix, so we do not install
+# them when running as a non-root user.
+if {[getuid] == 0} {
+
+    destroot.violate_mtree  yes
+
+    post-destroot {
+        # Create version/arch-specific links to the texbin directory used
+        # by the TeXDist prefpane; it seems that future versions of the
+        # prefpane will want these.
+        xinstall -d ${destroot}${texlive_mactex_texdistdir}-${version}
+        if {[variant_exists universal] && [variant_isset universal]} {
+            ln -s ${texlive_mactex_texbindir} \
+                ${destroot}${texlive_mactex_texdistdir}-${version}/universal-darwin
+        } else {
+            ln -s ${texlive_mactex_texbindir} \
+                ${destroot}${texlive_mactex_texdistdir}-${version}/${configure.build_arch}-darwin
+        }
+        ln -s ${texlive_mactex_texdistdir}-${version} \
+            ${destroot}${texlive_mactex_texdistdir}
+
+        # The directories MacPorts-TeXLive.texdist and MacPorts-teTeX.texdist in
+        # /Library/TeX/Distributions/ and MacPorts-TeXLive and MacPorts-teTeX in
+        # /Library/TeX/Distributions/.FactoryDefaults/ are considered by
+        # TeX Live / MacTeX developers as owned by MacPorts (see
+        # https://github.com/macports/macports-ports/pull/6755#issuecomment-613055213).
+        #
+        # Moreover, they are useful only if MacPorts' TeX Live is installed, so
+        # removing the old ones here and not restoring them in post-deactivate
+        # does no harm to the user. Consider also that teTeX does not exist
+        # anymore in MacPorts.
+
+        xinstall -d ${destroot}${texdist_mp}
+        ln -s ../${texdist_fd}/${texdist_name}/Contents ${destroot}${texdist_mp}/Contents
+
+        xinstall -d ${destroot}${texdist_mpfd}/AllTexmf
+        ln -s ${texlive_texmfports} ${destroot}${texdist_mpfd}/AllTexmf/texmf
+        ln -s ${texlive_texmfdist} ${destroot}${texdist_mpfd}/AllTexmf/texmf-dist
+        ln -s ${texlive_texmfdist}/doc ${destroot}${texdist_mpfd}/AllTexmf/texmf-doc
+        ln -s ${texlive_texmflocal} ${destroot}${texdist_mpfd}/AllTexmf/texmf-local
+        ln -s ${texlive_texmfsysvar} ${destroot}${texdist_mpfd}/AllTexmf/texmf-var
+
+        xinstall -d ${destroot}${texdist_mpfd}/Doc
+        ln -s ${texlive_texmfdist}/doc ${destroot}${texdist_mpfd}/Doc/texmf-dist-doc
+        ln -s ${texlive_texmfports}/doc ${destroot}${texdist_mpfd}/Doc/texmf-doc
+        ln -s ${texlive_texmfdist}/doc ${destroot}${texdist_mpfd}/Doc/texmf-doc-doc
+        ln -s ${texlive_texmfdist}/doc ${destroot}${texdist_mpfd}/Doc/texmf-var-doc
+
+        ln -s ${prefix}/share/info ${destroot}${texdist_mpfd}/Info
+        ln -s ${prefix}/share/man ${destroot}${texdist_mpfd}/Man
+
+        # The texdist script determines if a TeX distribution is usable
+        # by testing the binaries in the directory called `uname -p`.
+        # `uname -p` outputs i386 also for x86_64 systems.
+        xinstall -d ${destroot}${texdist_mpfd}/Programs
+        if {[variant_exists universal] && [variant_isset universal]} {
+            if {[string match "*ppc*" ${configure.universal_archs}]} {
+                ln -s ${texlive_mactex_texbindir} ${destroot}${texdist_mpfd}/Programs/powerpc
+                ln -s ${texlive_mactex_texbindir} ${destroot}${texdist_mpfd}/Programs/ppc
+            }
+            if {"x86_64" in ${configure.universal_archs} || "i386" in ${configure.universal_archs}} {
+                ln -s ${texlive_mactex_texbindir} ${destroot}${texdist_mpfd}/Programs/i386
+            }
+            if {"x86_64" in ${configure.universal_archs}} {
+                ln -s ${texlive_mactex_texbindir} ${destroot}${texdist_mpfd}/Programs/x86_64
+            }
+        } else {
+            if {[string match "ppc*" ${configure.build_arch}]} {
+                ln -s ${texlive_mactex_texbindir} ${destroot}${texdist_mpfd}/Programs/powerpc
+                ln -s ${texlive_mactex_texbindir} ${destroot}${texdist_mpfd}/Programs/ppc
+            } else {
+                if {${configure.build_arch} eq "x86_64"} {
+                    ln -s ${texlive_mactex_texbindir} ${destroot}${texdist_mpfd}/Programs/i386
+                }
+                ln -s ${texlive_mactex_texbindir} ${destroot}${texdist_mpfd}/Programs/${configure.build_arch}
+            }
+        }
+        ln -s ${texlive_mactex_texbindir} ${destroot}${texdist_mpfd}/Programs/texbin
+
+        xinstall -d ${destroot}${texdist_mpfd}/Resources/English.lproj
+        xinstall -m 644 ${filespath}/Description.rtf \
+            ${destroot}${texdist_mpfd}/Resources/English.lproj/Description.rtf
+        reinplace "s|%%PREFIX%%|${prefix}|g" \
+            ${destroot}${texdist_mpfd}/Resources/English.lproj/Description.rtf
+        reinplace "s|%%VERSION%%|${version}|g" \
+            ${destroot}${texdist_mpfd}/Resources/English.lproj/Description.rtf
+
+        ln -s ${prefix}/share ${destroot}${texdist_mpfd}/Root
+
+        set texdist_vfile [open ${destroot}${texdist_mpfd}/TeXDistVersion w]
+        puts ${texdist_vfile} "1"
+        close ${texdist_vfile}
+
+        ln -s ${texlive_texmflocal} ${destroot}${texdist_mpfd}/TexmfLocal
+        ln -s ${texlive_texmfsysvar} ${destroot}${texdist_mpfd}/TexmfSysVar
+    }
+
+    pre-activate {
+        # Delete leftover MacPorts-related TeXDist directories.
+        # See comment above in post-destroot for the rationale.
+        if {[string equal ${prefix} {/opt/local}]} {
+            set texdist_delete_dist [list TeXLive teTeX]
+            foreach dist ${texdist_delete_dist} {
+                set texdist_delete_dir [list \
+                                            ${texdist_root}/MacPorts-${dist}.texdist \
+                                            ${texdist_root}/${texdist_fd}/MacPorts-${dist} \
+                                           ]
+                foreach dir ${texdist_delete_dir} {
+                    if {[file exists ${dir}]} {
+                        delete file ${dir}
+                    }
+                }
+            }
+        }
+    }
 }
 
 default_variants    +x11
