socket_vmnet: use default CFLAGS/LDFLAGS
Pass the default CFLAGS and LDFLAGS as make variables when invoking
make.

--- a/net/socket_vmnet/Portfile
+++ b/net/socket_vmnet/Portfile
@@ -21,6 +21,8 @@ checksums           rmd160 c72c72fe8471df6d31df287d8df843e49d3a1fed \
 use_configure       no
 build.args          VERSION=${version} \
                     SOURCE_DATE_EPOCH=1696806366 \
+                    CFLAGS="${configure.cflags}" \
+                    LDFLAGS="${configure.ldflags}" \
                     PREFIX=${prefix}
 destroot.target     install.bin install.doc
 destroot.args       ${build.args}
