--- a/science/mpich/Portfile
+++ b/science/mpich/Portfile
@@ -21,7 +21,7 @@ PortGroup           mpiutil 1.0
 # make sure to keep in sync with mpi-doc
 name                mpich
 version             4.1.2
-revision            0
+revision            1
 
 license             BSD
 categories          science parallel net
@@ -187,6 +187,14 @@ if {${subport_enabled}} {
                     patch-no_qmkshrobj.diff \
                     patch-ch4-ipv6.diff \
                     patch-mpich-darwin-powerpc.diff
+
+    if {[vercmp ${xcodeversion} >= 15.0]} {
+        post-patch {
+            reinplace \
+                "s/commons_use_dylibs_works=yes/commons_use_dylibs_works=no/" \
+                configure
+        }
+    }
 
     platform darwin powerpc {
         # libfabric calls for atomicops, on PPC at least
