--- a/octave/octave-cgi/Portfile
+++ b/octave/octave-cgi/Portfile
@@ -5,11 +5,11 @@ PortGroup           octave 1.0
 
 octave.setup        cgi 0.1.2
 revision            5
-platforms           darwin
+platforms           any
 license             GPL-2+
 maintainers         {mps @Schamschula} openmaintainer
 description         Common Gateway Interface for Octave
-long_description    ${description}
+long_description    {*}${description}
 
 checksums           rmd160  c635b50448955ea5e3ef568d34f3f25d1a310cd5 \
                     sha256  4187eb2abec69c5735527fe3d6a25b2010fccede199fe556e242677ed991cf43 \
