--- a/octave/octave-divand/Portfile
+++ b/octave/octave-divand/Portfile
@@ -5,12 +5,12 @@ PortGroup           octave 1.0
 
 octave.setup        divand 1.1.2
 revision            5
-platforms           darwin
+platforms           any
 license             GPL-2+
 maintainers         {mps @Schamschula} openmaintainer
 description         divand performs an n-dimensional variational analysis \
                     (interpolation) of arbitrarily located observations.
-long_description    ${description}
+long_description    {*}${description}
 
 checksums           rmd160  f440fe5f62cd9fc9bc5c8c4150ff56f992192842 \
                     sha256  afaa9069daef3ae0fd9a9bb1031b7c2fbc03e7e7951245eef9d4b53364f9aa5a \
