--- a/octave/octave-financial/Portfile
+++ b/octave/octave-financial/Portfile
@@ -5,12 +5,12 @@ PortGroup           octave 1.0
 
 octave.setup        financial 0.5.3
 revision            2
-platforms           darwin
+platforms           any
 license             GPL-3+
 maintainers         {mps @Schamschula} openmaintainer
 description         Financial manipulation, plotting functions \
                     and additional date manipulation tools.
-long_description    ${description}
+long_description    {*}${description}
 
 checksums           rmd160  04eb2ae87129a539434ecc8087b9c344e324b926 \
                     sha256  ae6ef255597567c79e15f2b78e2d22febf43bc0d679de7ca6c79f36b9e1f2639 \
