socket_vmnet: patch to include correct Availability header
Signed-off-by: Link Dupont <link@sub-pop.net>

--- a/net/socket_vmnet/Portfile
+++ b/net/socket_vmnet/Portfile
@@ -18,6 +18,10 @@ checksums           rmd160 c72c72fe8471df6d31df287d8df843e49d3a1fed \
                     sha256 f5ec3fa24ad2c857b2b555f4fc91b39cbf3e9c4bc3191fb64c46ee7f49027b47 \
                     size 18738
 
+# Submitted upstream: https://github.com/lima-vm/socket_vmnet/pull/40
+patchfiles          fix-include-Availability-header.diff
+patch.pre_args      -p1
+
 use_configure       no
 build.args          VERSION=${version} \
                     SOURCE_DATE_EPOCH=1696806366 \
