--- a/python/py-black/Portfile
+++ b/python/py-black/Portfile
@@ -31,19 +31,10 @@ checksums           rmd160  28553d217a1de16fbf833a55bbfeb5c04e97561a \
                     sha256  4ce3ef14ebe8d9509188014d96af1c456a910d5b5cbf434a09fef7e024b3d0d5 \
                     size    620809
 
-python.versions     37 38 39 310 311 312
-python.pep517       yes
+python.versions     38 39 310 311 312
 python.pep517_backend   hatch
 
 if {${subport} ne ${name}} {
-    if {${python.version} == 37} {
-        version     23.3.0
-        revision    0
-        checksums   rmd160  47983e738ccaea165ba251b84114e6d140204eb9 \
-                    sha256  1c7b8d606e728a41ea1ccbd7264677e494e87cf630e399262ced92d4a8dac940 \
-                    size    582156
-    }
-
     depends_build-append \
                     port:py${python.version}-hatch-vcs \
                     port:py${python.version}-hatch-fancy-pypi-readme
@@ -65,16 +56,8 @@ if {${subport} ne ${name}} {
                     port:py${python.version}-typing_extensions
     }
 
-    if {${python.version} < 38} {
-        depends_lib-append \
-                    port:py${python.version}-typed-ast
-    }
-
     depends_run-append \
                     port:black_select
-
-    depends_test-append \
-                    port:py${python.version}-pytest
 
     test.run        yes
 
