--- a/python/py-socketio/Portfile
+++ b/python/py-socketio/Portfile
@@ -21,11 +21,10 @@ checksums           rmd160  f8099b9d44a498411dcc8ebc7dfc11475506d127 \
                     sha256  914ea3bedca2941d71bc4a2092f263ebb6c4af63635212e0e97c1708518170f6 \
                     size    174236
 
-python.versions     37 38 39 310 311
+python.versions     38 39 310 311
 
 if {${name} ne ${subport}} {
     depends_build-append \
-                    port:py${python.version}-setuptools \
                     port:py${python.version}-sphinx
 
     depends_run-append \
@@ -47,6 +46,4 @@ if {${name} ne ${subport}} {
         copy ${doc_build_dir}/html ${destroot}${prefix}/share/doc/${subport}
         copy ${doc_build_dir}/man ${destroot}${python.prefix}
     }
-
-    livecheck.type  none
 }
