--- a/octave/octave-femoctave/Portfile
+++ b/octave/octave-femoctave/Portfile
@@ -1,18 +1,15 @@
 # -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:et:sw=4:ts=4:sts=4
 
 PortSystem          1.0
-PortGroup           github 1.0
 PortGroup           octave 1.0
 
-version             2.1.4
+octave.setup        github AndreasStahel FEMoctave 2.1.4 v.
+octave.module       femoctave
 revision            0
-github.setup        AndreasStahel FEMoctave ${version} v.
-octave.setup        femoctave ${version}
 license             GPL-3+
 maintainers         {mps @Schamschula} openmaintainer
 description         Use FEM for solving boundary value problems in two space dimensions.
 long_description    {*}${description}
-homepage            https://github.com/AndreasStahel/FEMoctave/
 
 checksums           rmd160  a6bf69714084e1b0ed89188b4ee609d84443b380 \
                     sha256  ce51e5e10002162c76bd65d5c16a22fdb5dd7995bd6ae4432a3e7584fc59db7c \
