--- a/net/libtorrent-rasterbar/Portfile
+++ b/net/libtorrent-rasterbar/Portfile
@@ -14,7 +14,7 @@ PortGroup           boost 1.0
 boost.version       1.81
 
 github.setup        arvidn libtorrent 2.0.9 v
-revision            2
+revision            3
 name                libtorrent-rasterbar
 license             BSD
 categories          net
@@ -60,7 +60,7 @@ universal_variant   no
 
 conflicts_build     ${name}
 
-variant python38 conflicts python39 python310 python311 description {Build bindings for Python 3.8} {
+variant python38 conflicts python39 python310 python311 python312 description {Build bindings for Python 3.8} {
         require_active_variants boost[boost::version_nodot] python38
         depends_lib-append port:python38
         configure.args-append \
@@ -68,7 +68,7 @@ variant python38 conflicts python39 python310 python311 description {Build bindi
                 -DBoost_PYTHON38_LIBRARY_RELEASE=[boost::lib_dir]/libboost_python38-mt.dylib
 }
 
-variant python39 conflicts python38 python310 python311 description {Build bindings for Python 3.9} {
+variant python39 conflicts python38 python310 python311 python312 description {Build bindings for Python 3.9} {
         require_active_variants boost[boost::version_nodot] python39
         depends_lib-append port:python39
         configure.args-append \
@@ -76,7 +76,7 @@ variant python39 conflicts python38 python310 python311 description {Build bindi
                 -DBoost_PYTHON39_LIBRARY_RELEASE=[boost::lib_dir]/libboost_python39-mt.dylib
 }
 
-variant python310 conflicts python38 python39 python311 description {Build bindings for Python 3.10} {
+variant python310 conflicts python38 python39 python311 python312 description {Build bindings for Python 3.10} {
         require_active_variants boost[boost::version_nodot] python310
         depends_lib-append port:python310
         configure.args-append \
@@ -84,7 +84,7 @@ variant python310 conflicts python38 python39 python311 description {Build bindi
                 -DBoost_PYTHON310_LIBRARY_RELEASE=[boost::lib_dir]/libboost_python310-mt.dylib
 }
 
-variant python311 conflicts python38 python39 python310 description {Build bindings for Python 3.11} {
+variant python311 conflicts python38 python39 python310 python312 description {Build bindings for Python 3.11} {
         require_active_variants boost[boost::version_nodot] python311
         depends_lib-append port:python311
         configure.args-append \
@@ -92,10 +92,18 @@ variant python311 conflicts python38 python39 python310 description {Build bindi
                 -DBoost_PYTHON311_LIBRARY_RELEASE=[boost::lib_dir]/libboost_python311-mt.dylib
 }
 
+variant python312 conflicts python38 python39 python310 python311 description {Build bindings for Python 3.12} {
+        require_active_variants boost[boost::version_nodot] python312
+        depends_lib-append port:python312
+        configure.args-append \
+                -DPython3_EXECUTABLE=${prefix}/bin/python3.12 \
+                -DBoost_PYTHON312_LIBRARY_RELEASE=[boost::lib_dir]/libboost_python312-mt.dylib
+}
+
 variant error_logging description {Enable logging of errors to disk} {
         configure.args-replace -Dlogging=OFF -Dlogging=ON
 }
 
-if {![variant_isset python38] && ![variant_isset python39] && ![variant_isset python310]} {
-        default_variants +python311
+if {![variant_isset python38] && ![variant_isset python39] && ![variant_isset python310] && ![variant_isset python311]} {
+        default_variants +python312
 }
