legacy-support: Fix test failures on 10.6-10.8
The C++ tests were failing to build on platforms with a non-default
cxx_stdlib selection (10.6-10.8).  Since the "real" code is C-only,
and the stdlib selection is irrelevant to testing the use of the C
library, we simply disable cxx_stdlib.

TESTED:
Tests now build and pass on 10.6-10.8 +/-universal.
Tested on 10.4-10.5 ppc, 10.4-10.6 i386, 10.4-12.x x86_64, 11.x-14.x
arm64.

--- a/devel/legacy-support/Portfile
+++ b/devel/legacy-support/Portfile
@@ -61,6 +61,14 @@ subport ${name}-devel {
 # https://build.macports.org/builders/ports-10.10_x86_64-builder/builds/141962/steps/install-port/logs/stdio
 use_parallel_build  no
 
+# This port doesn't use C++ at all, except for a couple of tests which may
+# fail to build with an non-OS-default stdlib setting.  Since the cxx_stdlib
+# selection is unimportant for the tests (which are actually only testing
+# the C-only interface to the library), we disable the cxx_stlib setting.
+# This also avoids depending on a MacPorts compiler in some OS versions.
+
+configure.cxx_stdlib
+
 post-extract {
     # until upstream can be fixed, do not include atexit symbols
     # under certain circumstances, infinite recursive loops can form
