--- a/python/py-scikit-learn/Portfile
+++ b/python/py-scikit-learn/Portfile
@@ -5,12 +5,12 @@ PortGroup           python 1.0
 PortGroup           compiler_wrapper 1.0
 
 name                py-scikit-learn
-version             1.4.0
+version             1.4.1.post1
 revision            0
 categories-append   science
 license             BSD
 
-python.versions     38 39 310 311
+python.versions     38 39 310 311 312
 
 maintainers         {stromnov @stromnov} openmaintainer
 
@@ -24,9 +24,9 @@ long_description    Scikit-learn integrates machine learning algorithms \
 
 homepage            https://scikit-learn.org/
 
-checksums           rmd160  e57fdc4df798cbf7f16839f13f22a1c8d329d6b5 \
-                    sha256  d4373c984eba20e393216edd51a3e3eede56cbe93d4247516d205643c3b93121 \
-                    size    7706781
+checksums           rmd160  f31d7a07926e67dd2457957316ce56a690ca2571 \
+                    sha256  93d3d496ff1965470f9977d05e5ec3376fb1e63b10e4fda5e39d23c2d8969a30 \
+                    size    7743688
 
 if {${name} ne ${subport}} {
     depends_build-append \
@@ -43,14 +43,13 @@ if {${name} ne ${subport}} {
         checksums           rmd160  3f496523de9ba2f515836b92f4d8ca94375ba625 \
                             sha256  a2f54c76accc15a34bfb9066e6c7a56c1e7235dda5762b990792330b52ccfb05 \
                             size    7510251
+        python.pep517       no
     }
 
     compiler.openmp_version 2.5
     depends_lib-append  port:libomp
 
     python.add_archflags no
-
-    python.pep517        no
 
     build.env-append    "CPPFLAGS=${configure.cppflags} -I${prefix}/include/libomp -Xpreprocessor -fopenmp" \
                         "CFLAGS=${configure.cc_archflags} -I${prefix}/include/libomp" \
