--- a/python/py-bokeh/Portfile
+++ b/python/py-bokeh/Portfile
@@ -4,7 +4,7 @@ PortSystem          1.0
 PortGroup           python 1.0
 
 name                py-bokeh
-version             3.3.1
+version             3.3.4
 revision            0
 categories-append   devel
 license             BSD
@@ -12,7 +12,6 @@ platforms           {darwin any}
 supported_archs     noarch
 
 python.versions     38 39 310 311 312
-python.pep517       yes
 
 maintainers         {stromnov @stromnov} openmaintainer
 
@@ -29,29 +28,26 @@ checksums           rmd160  8ee881db769098468c4f2f3d4d7dc57a47e7155a \
                     size    6237542
 
 if {${name} ne ${subport}} {
-    if {${python.version} < 39} {
+    if {${python.version} eq 38} {
         version     3.1.1
         revision    0
-
         checksums   rmd160  cecfc65b6c84db00da4975e03d4576a22c690e87 \
                     sha256  ba0fc6bae4352d307541293256dee930a42d0acf92e760c72dc0e7397c3a28e9 \
                     size    7700613
     }
 
     depends_build-append \
-                        port:py${python.version}-setuptools-git-versioning
+                        port:py${python.version}-setuptools-git-versioning \
+                        port:py${python.version}-colorama
 
-    depends_lib-append  port:py${python.version}-colorama \
+    depends_lib-append  port:py${python.version}-jinja2 \
                         port:py${python.version}-contourpy \
-                        port:py${python.version}-dateutil \
-                        port:py${python.version}-jinja2 \
                         port:py${python.version}-numpy \
                         port:py${python.version}-packaging \
                         port:py${python.version}-pandas \
                         port:py${python.version}-Pillow \
-                        port:py${python.version}-tornado \
-                        port:py${python.version}-typing_extensions \
                         port:py${python.version}-yaml \
+                        port:py${python.version}-tornado \
                         port:py${python.version}-xyzservices
 
     # required if subport versions differ
