--- a/python/py-gsl/Portfile
+++ b/python/py-gsl/Portfile
@@ -24,7 +24,7 @@ checksums               rmd160  6fce43c412daf0dfc392fd1a7451258bee6047ac \
                         sha256  26f79645bccef52a4f9f24c4307d9be954992ac008581750d4413e405404406a \
                         size    1096186
 
-python.versions         37 38 39 310
+python.versions         38 39 310
 
 if {${name} ne ${subport}} {
     depends_build-append \
