--- a/python/py-iminuit/Portfile
+++ b/python/py-iminuit/Portfile
@@ -12,7 +12,7 @@ license             LGPL
 maintainers         nomaintainer
 
 description         MINUIT from Python - Fitting like a boss
-long_description    ${description}
+long_description    {*}${description}
 
 homepage            https://iminuit.readthedocs.io/en/latest/
 
@@ -20,7 +20,7 @@ checksums           rmd160  951ae70bfd77a092048d493d704aa4a453b8df1e \
                     sha256  75f4a8a2bad21fda7b6bd42df7ca04120fb24636ebf9b566d259b26f2044b1d0 \
                     size    431704
 
-python.versions     37 38 39 310
+python.versions     38 39 310
 
 compiler.cxx_standard   2014
 
