octave-gsl: Add missing patchfile
Fixes "fatal error: 'ov-scalar.h' file not found" which occurred due to
failure to locate Octave's include directory.

Closes: https://trac.macports.org/ticket/69246

--- a/octave/octave-gsl/Portfile
+++ b/octave/octave-gsl/Portfile
@@ -5,7 +5,6 @@ PortGroup           octave 1.0
 
 octave.setup        sourceforge octave gsl 2.1.1
 revision            8
-platforms           darwin
 license             GPL-2+
 maintainers         {mps @Schamschula} openmaintainer
 description         Octave bindings to the GNU Scientific Library.
@@ -15,7 +14,25 @@ checksums           rmd160  8c434c0a811efd885eac78b91f328f49b3eb668d \
                     sha256  d028c52579e251c3f21ebfdf065dffab3ad7893434efda33b501225ef1ea6ed3 \
                     size    122003
 
+# We patch configure.ac.in.
+use_autoreconf      yes
+autoreconf.dir      ${worksrcpath}/src
+autoreconf.cmd      ./bootstrap
+autoreconf.args
+
+depends_build-append \
+                    port:autoconf \
+                    port:automake \
+                    port:libtool
+
 depends_lib-append  port:gsl
 
-patchfiles          of-gsl-1-cross-fixes.patch \
+patchfiles          configure.ac.in-return-type.patch \
+                    configure.ac.in-octave_include_dir.patch \
                     patch-src-gsl_sf.cc.diff
+
+platform darwin {
+    # Only needed because we run bootstrap.
+    patchfiles-append \
+                    replace_template.sh-sed.patch
+}
